--- a/pc/UI_ADHPAaM01.html
+++ b/pc/UI_ADHPAaM01.html
@@ -116,7 +116,7 @@
                                                                     <td class="new_th">지역</td>
                                                                     <td>
                                                                         <fieldset class="box_chk-group" role="group" aria-labelledby="regionLegend">
-                                                                            <legend id="regionLegend" class="sr-only">지역 선택</legend>
+                                                                            <legend id="regionLegend" class="sr_only">지역 선택</legend>
                                                                             <span>
                                                                                 <input type="checkbox" name="chkRegion" id="chkRegionAll" class="chkRegion" value="ALL" checked="true">
                                                                                 <label for="chkRegionAll">전체</label>
@@ -196,7 +196,7 @@
                                                                     <td class="new_th">운영대학</td>
                                                                     <td>
                                                                         <span class="box_ipt new_ipt">
-                                                                            <label for="srchKeyword" class="sr-only">운영대학 검색</label>
+                                                                            <label for="srchKeyword" class="sr_only">운영대학 검색</label>
                                                                             <input type="text" class="input_txt" id="srchKeyword" name="srchKeyword" value="" placeholder="운영대학" title="키워드 입력">
                                                                             <button type="button" class="ico16_delete"><span class="blind">삭제</span></button>
                                                                         </span>
