--- a/pc/UI_ADHPAaM02.html
+++ b/pc/UI_ADHPAaM02.html
@@ -117,7 +117,7 @@
                                                                     <td class="new_th">지역</td>
                                                                     <td>
                                                                         <fieldset class="box_chk-group" role="group" aria-labelledby="regionLegend">
-                                                                            <legend id="regionLegend" class="sr-only">지역 선택</legend>
+                                                                            <legend id="regionLegend" class="sr_only">지역 선택</legend>
                                                                             <span>
                                                                                 <input type="checkbox" name="chkRegion" id="chkRegionAll" class="chkRegion" value="ALL" checked="true">
                                                                                 <label for="chkRegionAll">전체</label>
@@ -197,7 +197,7 @@
                                                                     <td class="new_th">운영대학</td>
                                                                     <td>
                                                                         <span class="box_ipt new_ipt">
-                                                                            <label for="srchKeyword" class="sr-only">운영대학 검색</label>
+                                                                            <label for="srchKeyword" class="sr_only">운영대학 검색</label>
                                                                             <input type="text" class="input_txt" id="srchKeyword" name="srchKeyword" value="" placeholder="운영대학" title="키워드 입력">
                                                                             <button type="button" class="ico16_delete"><span class="blind">삭제</span></button>
                                                                         </span>
@@ -368,7 +368,7 @@
                                                                     <td class="new_th">운영대학</td>
                                                                     <td>
                                                                         <span class="box_ipt new_ipt">
-                                                                            <label for="srchKeyword_univ" class="sr-only">운영대학 검색</label>
+                                                                            <label for="srchKeyword_univ" class="sr_only">운영대학 검색</label>
                                                                             <input type="text" class="input_txt" id="srchKeyword_univ" name="srchKeyword_univ" placeholder="대학교 명" title="운영대학 키워드 입력">
                                                                             <button type="button" class="ico16_delete" aria-label="운영대학 검색어 삭제">
                                                                                 <span class="blind">삭제</span>
@@ -378,7 +378,7 @@
                                                                     <td class="new_th">프로그램명</td>
                                                                     <td>
                                                                         <span class="box_ipt new_ipt">
-                                                                            <label for="srchKeyword_prog" class="sr-only">프로그램명 검색</label>
+                                                                            <label for="srchKeyword_prog" class="sr_only">프로그램명 검색</label>
                                                                             <input type="text" class="input_txt" id="srchKeyword_prog" name="srchKeyword_prog" placeholder="프로그램명" title="프로그램명 키워드 입력">
                                                                             <button type="button" class="ico16_delete" aria-label="프로그램명 검색어 삭제">
                                                                                 <span class="blind">삭제</span>
@@ -390,7 +390,7 @@
                                                                     <td class="new_th">지역</td>
                                                                     <td colspan="3">
                                                                         <fieldset class="box_chk-group" role="group" aria-labelledby="PopregionLegend">
-                                                                            <legend id="PopregionLegend" class="sr-only">지역 선택</legend>
+                                                                            <legend id="PopregionLegend" class="sr_only">지역 선택</legend>
                                                                             <span>
                                                                                 <input type="checkbox" name="PopchkRegion" id="PopchkRegionAll" class="PopchkRegion" value="ALL" checked="true">
                                                                                 <label for="PopchkRegionAll">전체</label>
@@ -502,9 +502,9 @@
                                                                     <td class="new_th">운영 기간</td>
                                                                     <td colspan="3">
                                                                         <fieldset class="form_box">
-                                                                            <legend class="sr-only">조회 기간 선택 및 날짜 입력</legend>
+                                                                            <legend class="sr_only">조회 기간 선택 및 날짜 입력</legend>
                                                                             <div class="date_select">
-                                                                                <label for="newDate" class="sr-only">조회 기간 선택</label>
+                                                                                <label for="newDate" class="sr_only">조회 기간 선택</label>
                                                                                 <select id="newDate" name="period">
                                                                                     <option value="" selected>선택</option>
                                                                                     <option value="today">오늘</option>
@@ -519,7 +519,7 @@
                                                                             <div class="box_table_group box_datepicker" aria-label="직접 날짜 입력">
                                                                                 <div class="cell">
                                                                                     <span class="box_ipt w_small">
-                                                                                        <label for="schRcptStdte" class="sr-only">등록 시작일</label>
+                                                                                        <label for="schRcptStdte" class="sr_only">등록 시작일</label>
                                                                                         <input type="text" onkeyup="fn_selfInput(this)" id="schRcptStdte" name="schRcptStdte" class="btnCalendar input_txt hasDatepicker" placeholder="YYYY-MM-DD" inputmode="numeric">
                                                                                         <button type="button" class="btn_calendar ui-datepicker-trigger" aria-label="등록 시작일 달력 선택"></button>
                                                                                     </span>
@@ -527,7 +527,7 @@
                                                                                 <i class="date_line" aria-hidden="true">~</i>
                                                                                 <div class="cell">
                                                                                     <span class="box_ipt w_small">
-                                                                                        <label for="schRcptEndte" class="sr-only">등록 종료일</label>
+                                                                                        <label for="schRcptEndte" class="sr_only">등록 종료일</label>
                                                                                         <input type="text" onkeyup="fn_selfInput(this)" id="schRcptEndte" name="schRcptEndte" class="btnCalendar input_txt hasDatepicker" placeholder="YYYY-MM-DD" inputmode="numeric">
                                                                                         <button type="button" class="btn_calendar ui-datepicker-trigger" aria-label="등록 종료일 달력 선택"></button>
                                                                                     </span>
