--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                     <td>UI_ADHPAbS03</td>
                     <td class="status"></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="./pc/UI_ADHPAbS03.html" target="_blank">PC</a>
+                        <a href="./mo/UI_ADHPAbS03.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
