--- a/pc/UI_ADHPAaM01.html
+++ b/pc/UI_ADHPAaM01.html
@@ -198,7 +198,7 @@
                                                                         <span class="box_ipt new_ipt">
                                                                             <label for="srchKeyword" class="sr_only">운영대학 검색</label>
                                                                             <input type="text" class="input_txt" id="srchKeyword" name="srchKeyword" value="" placeholder="운영대학" title="키워드 입력">
-                                                                            <button type="button" class="ico16_delete"><span class="blind">삭제</span></button>
+                                                                            <button type="button" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                                         </span>
                                                                     </td>
                                                                 </tr>
@@ -206,7 +206,7 @@
                                                         </table>
                                                         <div class="box_btn_wrap flex_al_c type02">
                                                             <button type="submit" id="srchBtn" class="btn medium fill type01">검색</button>
-                                                            <button type="button" id="btnClean" class="btn medium type01 reset">초기화</button>
+                                                            <button type="button" id="btnClean" class="btn medium type01 reset newbtn_reset">초기화</button>
                                                         </div>
                                                     </form>
                                                 </article>
