--- a/pc/UI_ADHPAaM02.html
+++ b/pc/UI_ADHPAaM02.html
@@ -119,7 +119,7 @@
                                                                         <fieldset class="box_chk-group" role="group" aria-labelledby="regionLegend">
                                                                             <legend id="regionLegend" class="sr_only">지역 선택</legend>
                                                                             <span>
-                                                                                <input type="checkbox" name="chkRegion" id="chkRegionAll" class="chkRegion" value="ALL" checked="true">
+                                                                                <input type="checkbox" name="chkRegion" id="chkRegionAll" class="chkRegion" value="ALL">
                                                                                 <label for="chkRegionAll">전체</label>
                                                                             </span>
                                                                             <span>
@@ -199,7 +199,7 @@
                                                                         <span class="box_ipt new_ipt">
                                                                             <label for="srchKeyword" class="sr_only">운영대학 검색</label>
                                                                             <input type="text" class="input_txt" id="srchKeyword" name="srchKeyword" value="" placeholder="운영대학" title="키워드 입력">
-                                                                            <button type="button" class="ico16_delete"><span class="blind">삭제</span></button>
+                                                                            <button type="button" class="newbtn_del ico16_delete"><span class="blind">삭제</span></button>
                                                                         </span>
                                                                     </td>
                                                                 </tr>
@@ -207,7 +207,7 @@
                                                         </table>
                                                         <div class="box_btn_wrap flex_al_c type02">
                                                             <button type="submit" id="srchBtn" class="btn medium fill type01">검색</button>
-                                                            <button type="reset" id="btnClean" class="btn medium type01 reset">초기화</button>
+                                                            <button type="reset" id="btnClean" class="btn medium type01 reset newbtn_reset">초기화</button>
                                                         </div>
                                                     </form>
                                                 </article>
@@ -370,7 +370,7 @@
                                                                         <span class="box_ipt new_ipt">
                                                                             <label for="srchKeyword_univ" class="sr_only">운영대학 검색</label>
                                                                             <input type="text" class="input_txt" id="srchKeyword_univ" name="srchKeyword_univ" placeholder="대학교 명" title="운영대학 키워드 입력">
-                                                                            <button type="button" class="ico16_delete" aria-label="운영대학 검색어 삭제">
+                                                                            <button type="button" class="newbtn_del ico16_delete" aria-label="운영대학 검색어 삭제">
                                                                                 <span class="blind">삭제</span>
                                                                             </button>
                                                                         </span>
@@ -380,7 +380,7 @@
                                                                         <span class="box_ipt new_ipt">
                                                                             <label for="srchKeyword_prog" class="sr_only">프로그램명 검색</label>
                                                                             <input type="text" class="input_txt" id="srchKeyword_prog" name="srchKeyword_prog" placeholder="프로그램명" title="프로그램명 키워드 입력">
-                                                                            <button type="button" class="ico16_delete" aria-label="프로그램명 검색어 삭제">
+                                                                            <button type="button" class="newbtn_del ico16_delete" aria-label="프로그램명 검색어 삭제">
                                                                                 <span class="blind">삭제</span>
                                                                             </button>
                                                                         </span>
@@ -392,7 +392,7 @@
                                                                         <fieldset class="box_chk-group" role="group" aria-labelledby="PopregionLegend">
                                                                             <legend id="PopregionLegend" class="sr_only">지역 선택</legend>
                                                                             <span>
-                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegionAll" class="PopchkRegion" value="ALL" checked="true">
+                                                                                <input type="checkbox" name="PopchkRegion" id="PopchkRegionAll" class="PopchkRegion" value="ALL">
                                                                                 <label for="PopchkRegionAll">전체</label>
                                                                             </span>
                                                                             <span>
@@ -472,7 +472,7 @@
                                                                         <fieldset class="box_chk-group">
                                                                             <legend class="visually-hidden">프로그램 유형 선택</legend>
                                                                             <span>
-                                                                                <input type="checkbox" name="programType" id="programTypeAll" class="programType" value="ALL" checked>
+                                                                                <input type="checkbox" name="programType" id="programTypeAll" class="programType" value="ALL">
                                                                                 <label for="programTypeAll">전체</label>
                                                                             </span>
                                                                             <span>
@@ -540,7 +540,7 @@
                                                         </table>
                                                         <div class="box_btn_wrap flex_al_c type02">
                                                             <button type="submit" id="srchBtn" class="btn medium fill type01">검색</button>
-                                                            <button type="reset" id="popBtnClean" class="btn medium type01 reset">초기화</button>
+                                                            <button type="reset" id="popBtnClean" class="btn medium type01 reset newbtn_reset">초기화</button>
                                                         </div>
                                                     </form>
                                                 </article>
