--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <td></td>
                     <td>참여신청서 - 등록</td>
                     <td>UI_ADHPAbS03</td>
-                    <td class="status"></td>
+                    <td class="status">작업중</td>
                     <td>
                         <a href="./pc/UI_ADHPAbS03.html" target="_blank">PC</a>
                         <a href="./mo/UI_ADHPAbS03.html" target="_blank">MO</a>
