--- a/pc/UI_ADHPAaM01.html
+++ b/pc/UI_ADHPAaM01.html
@@ -353,6 +353,7 @@
                             </div>
                             <!-- 콘텐츠영역 끝 -->
 
+                            <button type="button" onclick="testScriptConnection()">스크립트 연결 확인</button>
 
 
 
@@ -376,7 +377,7 @@
             <!-- 푸터 영역 -->
 
         </div>
-    </body>
-    <script src="../pc/js/include.js"></script>
-    <script src="../pc/js/contents.js"></script>
+        <script src="../pc/js/include.js"></script>
+        <script src="../pc/js/contents.js"></script>
+</body>
 </html>
