--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                     <td>UI_ADHPAbM01</td>
                     <td class="status">작업중</td>
                     <td>
-                        <a href="./pc/UI_ADHPAbM01" target="_blank">PC</a>
-                        <a href="./mo/UI_ADHPAbM01" target="_blank">MO</a>
+                        <a href="./pc/UI_ADHPAbM01.html" target="_blank">PC</a>
+                        <a href="./mo/UI_ADHPAbM01.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -118,8 +118,8 @@
                     <td>UI_ADHPAbM02</td>
                     <td class="status">작업중</td>
                     <td>
-                        <a href="./pc/UI_ADHPAbM02" target="_blank">PC</a>
-                        <a href="./mo/UI_ADHPAbM02" target="_blank">MO</a>
+                        <a href="./pc/UI_ADHPAbM02.html" target="_blank">PC</a>
+                        <a href="./mo/UI_ADHPAbM02.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
