--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <th>화면명</th>
                     <th>화면 ID</th>
                     <th>작업현황</th>
+                    <th>비고</th>
                     <th>링크</th>
                 </tr>
             </thead>
@@ -72,6 +73,7 @@
                     <td>운영대학 목록</td>
                     <td>UI_ADHPAaM01</td>
                     <td class="status">작업중</td>
+                    <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAaM01.html" target="_blank">PC</a>
                         <a href="./mo/UI_ADHPAaM01.html" target="_blank">MO</a>
@@ -87,6 +89,7 @@
                     <td>운영대학 목록 - 프로그램 조회 팝업</td>
                     <td>UI_ADHPAaM02</td>
                     <td class="status">작업중</td>
+                    <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAaM02.html" target="_blank">PC</a>
                         <a href="./mo/UI_ADHPAaM02.html" target="_blank">MO</a>
@@ -102,6 +105,7 @@
                     <td>참여신청서 - 목록 없음</td>
                     <td>UI_ADHPAbM01</td>
                     <td class="status">작업중</td>
+                    <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbM01.html" target="_blank">PC</a>
                         <a href="./mo/UI_ADHPAbM01.html" target="_blank">MO</a>
@@ -117,6 +121,7 @@
                     <td>참여신청서 - 목록 있음</td>
                     <td>UI_ADHPAbM02</td>
                     <td class="status">작업중</td>
+                    <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbM02.html" target="_blank">PC</a>
                         <a href="./mo/UI_ADHPAbM02.html" target="_blank">MO</a>
@@ -132,6 +137,7 @@
                     <td>참여신청서 - 등록</td>
                     <td>UI_ADHPAbS03</td>
                     <td class="status">작업중</td>
+                    <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS03.html" target="_blank">PC</a>
                         <a href="./mo/UI_ADHPAbS03.html" target="_blank">MO</a>
@@ -147,9 +153,10 @@
                     <td>참여신청서 - 조회</td>
                     <td>UI_ADHPAbS04</td>
                     <td class="status"></td>
+                    <td>신청 및 처리현황 부분 보류</td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="./pc/UI_ADHPAbS04.html" target="_blank">PC</a>
+                        <a href="./mo/UI_ADHPAbS04.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -162,6 +169,7 @@
                     <td>참여신청서 - 회수(수정)</td>
                     <td>UI_ADHPAbS05</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -177,6 +185,7 @@
                     <td>운영 대학 검색 팝업</td>
                     <td>UI_ADHPAbP06</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -192,6 +201,7 @@
                     <td>전공찾기팝업 - 조회/선택/등록</td>
                     <td>UI_ADHPAbP07</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -207,6 +217,7 @@
                     <td>전공찾기팝업 - 조회/선택/등록(계열분류)</td>
                     <td>UI_ADHPAbP08</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -222,6 +233,7 @@
                     <td>전공찾기팝업 - 조회/선택/등록(검색결과)</td>
                     <td>UI_ADHPAbP09</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -237,6 +249,7 @@
                     <td>개인정보 수집·이용·제공에 대한 동의서(참여자용)</td>
                     <td>UI_ADHPAbP10</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -252,6 +265,7 @@
                     <td>프로그램 신청 - 목록 없음</td>
                     <td>UI_ADHPAcM01</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -267,6 +281,7 @@
                     <td>프로그램 신청 - 목록 있음</td>
                     <td>UI_ADHPAcM02</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -282,6 +297,7 @@
                     <td>프로그램 신청 - 신청</td>
                     <td>UI_ADHPAcS03</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -297,6 +313,7 @@
                     <td>프로그램 신청 - 조회</td>
                     <td>UI_ADHPAcS04</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -312,6 +329,7 @@
                     <td>참여 프로그램 관리 - 목록 없음</td>
                     <td>UI_ADHPAdM01</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -327,6 +345,7 @@
                     <td>참여 프로그램 관리 - 목록 있음</td>
                     <td>UI_ADHPAdM02</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -342,6 +361,7 @@
                     <td>참여 프로그램 관리 - 조회</td>
                     <td>UI_ADHPAdS03</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -357,6 +377,7 @@
                     <td>참여 프로그램 관리 - 만족도 조사</td>
                     <td>UI_ADHPAdS04</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -372,6 +393,7 @@
                     <td>상담이력 - 목록 없음</td>
                     <td>UI_ADHPAeM01</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -387,6 +409,7 @@
                     <td>상담이력 - 목록 있음</td>
                     <td>UI_ADHPAeM02</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -402,6 +425,7 @@
                     <td>완료 페이지 - 신청서 제출 완료</td>
                     <td>UI_ADHPAbS11</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -417,6 +441,7 @@
                     <td>완료 페이지 - 회수 완료</td>
                     <td>UI_ADHPAbS12</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -432,6 +457,7 @@
                     <td>완료 페이지 - 삭제 완료</td>
                     <td>UI_ADHPAbS13</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -447,6 +473,7 @@
                     <td>완료 페이지 - 수정 완료</td>
                     <td>UI_ADHPAbS14</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
@@ -462,6 +489,7 @@
                     <td>완료 페이지 - 신청 완료</td>
                     <td>UI_ADHPAbS15</td>
                     <td class="status"></td>
+                    <td></td>
                     <td>
                         <a href="" target="_blank">PC</a>
                         <a href="" target="_blank">MO</a>
