--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
                     <td></td>
                     <td>참여신청서 - 조회</td>
                     <td>UI_ADHPAbS04</td>
-                    <td class="status"></td>
+                    <td class="status">작업중</td>
                     <td>신청 및 처리현황 부분 보류</td>
                     <td>
                         <a href="./pc/UI_ADHPAbS04.html" target="_blank">PC</a>
                         <a href="./mo/UI_ADHPAbS04.html" target="_blank">MO</a>
-                    </td>
+                    </td>d
                 </tr>
                 <tr>
                     <td class="no"></td>
@@ -424,11 +424,11 @@
                     <td></td>
                     <td>완료 페이지 - 신청서 제출 완료</td>
                     <td>UI_ADHPAbS11</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="./pc/UI_ADHPAbS11.html" target="_blank">PC</a>
+                        <a href="./mo/UI_ADHPAbS11.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -440,11 +440,11 @@
                     <td></td>
                     <td>완료 페이지 - 회수 완료</td>
                     <td>UI_ADHPAbS12</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="./pc/UI_ADHPAbS12.html" target="_blank">PC</a>
+                        <a href="./mo/UI_ADHPAbS12.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -456,11 +456,11 @@
                     <td></td>
                     <td>완료 페이지 - 삭제 완료</td>
                     <td>UI_ADHPAbS13</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="./pc/UI_ADHPAbS13.html" target="_blank">PC</a>
+                        <a href="./mo/UI_ADHPAbS13.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -472,11 +472,11 @@
                     <td></td>
                     <td>완료 페이지 - 수정 완료</td>
                     <td>UI_ADHPAbS14</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="./pc/UI_ADHPAbS14.html" target="_blank">PC</a>
+                        <a href="./mo/UI_ADHPAbS14.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -488,11 +488,11 @@
                     <td></td>
                     <td>완료 페이지 - 신청 완료</td>
                     <td>UI_ADHPAbS15</td>
-                    <td class="status"></td>
+                    <td class="status">완료</td>
                     <td></td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="./pc/UI_ADHPAbS15.html" target="_blank">PC</a>
+                        <a href="./mo/UI_ADHPAbS15.html" target="_blank">MO</a>
                     </td>
                 </tr>
             </tbody>
