--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>INDEX</title>
         <link rel="stylesheet" href="./pc/include/css/reset.css">
-        <link rel="stylesheet" href="./pc/css/font.css">
+        <link rel="stylesheet" href="./pc/include/css/font.css">
     </head>
     <body>
         <style>
@@ -38,15 +38,14 @@
                 });
             });
         </script>
-        <table>
-            <div class="top_wrap">
-                <h1>청년 고용 올케어 플랫폼 구축 사업</h1>
-                <div class="btn_box">
-                    <a href="./pc/sample.html" target="_blank">PC 샘플 페이지</a>
-                    <a href="./mobile/mo_sample.html" target="_blank">Mobile 샘플 페이지</a>
-                </div>
+        <div class="top_wrap">
+            <h1>청년 고용 올케어 플랫폼 구축 사업</h1>
+            <div class="btn_box">
+                <a href="./pc/sample.html" target="_blank">PC 샘플 페이지</a>
+                <a href="./mobile/mo_sample.html" target="_blank">Mobile 샘플 페이지</a>
             </div>
-            <caption style="font-size: 0;">청년 고용 올케어 플랫폼 구축 사업</caption>
+        </div>
+        <table>
             <thead>
                 <tr>
                     <th>NO</th>
@@ -157,7 +156,7 @@
                     <td>
                         <a href="./pc/UI_ADHPAbS04.html" target="_blank">PC</a>
                         <a href="./mo/UI_ADHPAbS04.html" target="_blank">MO</a>
-                    </td>d
+                    </td>
                 </tr>
                 <tr>
                     <td class="no"></td>
