--- a/pc/UI_ADHPAaM02.html
+++ b/pc/UI_ADHPAaM02.html
@@ -206,9 +206,8 @@
                                                             </tbody>
                                                         </table>
                                                         <div class="box_btn_wrap flex_al_c type02">
-                                                            <button type="submit" id="srchBtn" class="btn medium fill type01">검색</button>
-                                                            <button type="reset" id="btnClean" class="btn medium type01 reset newbtn_reset">초기화</button>
-                                                        </div>
+                                                            <button type="button" id="btnClean" class="btn medium type01 reset newbtn_reset newbtn_w88">초기화</button>
+                                                            <button type="submit" id="srchBtn" class="btn medium fill type01 newbtn_w60">검색</button>                                                        </div>
                                                     </form>
                                                 </article>
 
@@ -346,7 +345,8 @@
                                             </div>
                                         </div>
 
-                                        <div class="new_popup" role="dialog" aria-modal="true" aria-labelledby="popupTitle">
+                                        <!-- 팝업내용 시작 -->
+                                        <div class="new_popup newpop_uni_index" role="dialog" aria-modal="true" aria-labelledby="popupTitle">
                                             <div class="newpop_tit">   
                                                 <h4>운영 프로그램</h4>
                                                 <a href="./UI_ADHPAaM01.html" id="interClosed" class="closed"><span class="blind">팝업 닫기</span></a>
@@ -539,8 +539,8 @@
                                                             </tbody>
                                                         </table>
                                                         <div class="box_btn_wrap flex_al_c type02">
-                                                            <button type="submit" id="srchBtn" class="btn medium fill type01">검색</button>
-                                                            <button type="reset" id="popBtnClean" class="btn medium type01 reset newbtn_reset">초기화</button>
+                                                            <button type="reset" id="popBtnClean" class="btn medium type01 reset newbtn_reset newbtn_w88">초기화</button>
+                                                            <button type="submit" id="srchBtn" class="btn medium fill type01 newbtn_w60">검색</button>
                                                         </div>
                                                     </form>
                                                 </article>
