--- a/pc/UI_ADHPAbS04.html
+++ b/pc/UI_ADHPAbS04.html
@@ -196,7 +196,6 @@
                                             <div class="box_group_wrap">
                                                 <div class="tit_box">
                                                     <h3 class="t2_sb">신청 및 처리현황</h3>
-                                                    <p>개인정보 수집이용제공에 대한 동의 일자 : 2025-00-00</p>
                                                 </div>
                                                 
                                                 <div class="box_table_wrap write type01">
@@ -229,8 +228,8 @@
 
                                             <div class="box_end_wrap" role="region" aria-label="제출 정보 영역">
                                                 <div class="btn_box mt40">
-                                                    <button type="button" class="btn big type02" aria-label="신청 목록 페이지로 이동"><a href="">목록</a></button>
-                                                    <button type="submit" id="srchBtn" class="btn big fill type01"><a href="">회수</a></button>
+                                                    <button type="button" class="btn big type02" aria-label="신청 목록 페이지로 이동">목록</button>
+                                                    <button type="submit" id="srchBtn" class="btn big fill type01">회수</button>
                                                 </div>
                                             </div>
                                         </div>
