--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAaM01.html" target="_blank">PC</a>
-                        <a href="./mo/UI_ADHPAaM01.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAaM01.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -91,7 +91,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAaM02.html" target="_blank">PC</a>
-                        <a href="./mo/UI_ADHPAaM02.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAaM02.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -107,7 +107,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbM01.html" target="_blank">PC</a>
-                        <a href="./mo/UI_ADHPAbM01.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbM01.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -123,7 +123,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbM02.html" target="_blank">PC</a>
-                        <a href="./mo/UI_ADHPAbM02.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbM02.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -139,7 +139,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS03.html" target="_blank">PC</a>
-                        <a href="./mo/UI_ADHPAbS03.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS03.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -155,7 +155,7 @@
                     <td>신청 및 처리현황 부분 보류</td>
                     <td>
                         <a href="./pc/UI_ADHPAbS04.html" target="_blank">PC</a>
-                        <a href="./mo/UI_ADHPAbS04.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS04.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -183,11 +183,11 @@
                     <td></td>
                     <td>운영 대학 검색 팝업</td>
                     <td>UI_ADHPAbP06</td>
-                    <td class="status"></td>
-                    <td></td>
+                    <td class="status">작업중</td>
+                    <td>배경사이트 html 수정예정</td>
                     <td>
-                        <a href="" target="_blank">PC</a>
-                        <a href="" target="_blank">MO</a>
+                        <a href="./pc/UI_ADHPAbP06.html" target="_blank">PC</a>
+                        <a href="./mobile/UI_ADHPAbP06.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -427,7 +427,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS11.html" target="_blank">PC</a>
-                        <a href="./mo/UI_ADHPAbS11.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS11.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -443,7 +443,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS12.html" target="_blank">PC</a>
-                        <a href="./mo/UI_ADHPAbS12.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS12.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -459,7 +459,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS13.html" target="_blank">PC</a>
-                        <a href="./mo/UI_ADHPAbS13.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS13.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -475,7 +475,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS14.html" target="_blank">PC</a>
-                        <a href="./mo/UI_ADHPAbS14.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS14.html" target="_blank">MO</a>
                     </td>
                 </tr>
                 <tr>
@@ -491,7 +491,7 @@
                     <td></td>
                     <td>
                         <a href="./pc/UI_ADHPAbS15.html" target="_blank">PC</a>
-                        <a href="./mo/UI_ADHPAbS15.html" target="_blank">MO</a>
+                        <a href="./mobile/UI_ADHPAbS15.html" target="_blank">MO</a>
                     </td>
                 </tr>
             </tbody>
