--- a/pc/UI_ADHPAaM01.html
+++ b/pc/UI_ADHPAaM01.html
@@ -205,8 +205,8 @@
                                                             </tbody>
                                                         </table>
                                                         <div class="box_btn_wrap flex_al_c type02">
-                                                            <button type="submit" id="srchBtn" class="btn medium fill type01">검색</button>
-                                                            <button type="button" id="btnClean" class="btn medium type01 reset newbtn_reset">초기화</button>
+                                                            <button type="button" id="btnClean" class="btn medium type01 reset newbtn_reset newbtn_w88">초기화</button>
+                                                            <button type="submit" id="srchBtn" class="btn medium fill type01 newbtn_w60">검색</button>
                                                         </div>
                                                     </form>
                                                 </article>
