--- a/pc/UI_ADHPAbS03.html
+++ b/pc/UI_ADHPAbS03.html
@@ -260,7 +260,7 @@
                                                             <p>“졸업생 특화 프로그램” 참여 신청과 관련하여 개인정보를 수집·이용·제공하기 위한 동의 절차</p>
                                                             <strong>&#x203B; 전문보기 후 개인정보 수집·이용·제공 동의를 선택할 수 있습니다.</strong>
                                                         </div>
-                                                        <button type="button" class="btn_view_doc btn small type02" aria-label="개인정보 수집·이용·제공 동의서 전문보기"><a href="">전문보기</a></button>
+                                                        <button type="button" class="btn_view_doc btn small type02" aria-label="개인정보 수집·이용·제공 동의서 전문보기">전문보기</button>
                                                     </div>
                                                     
                                                     <div class="agm_cho">
@@ -292,8 +292,8 @@
                                                 </div>
 
                                                 <div class="btn_box mt40">
-                                                    <button type="button" class="btn big type02" aria-label="신청 목록 페이지로 이동"><a href="">목록</a></button>
-                                                    <button type="submit" id="srchBtn" class="btn big fill type01"><a href="">제출</a></button>
+                                                    <button type="button" class="btn big type02" aria-label="신청 목록 페이지로 이동">목록</button>
+                                                    <button type="submit" id="srchBtn" class="btn big fill type01">제출</button>
                                                 </div>
                                             </div>
                                         </div>
